# llm-book-qa

./: .gitignore  pyproject.toml  requirements.txt
app/: app.py  lib.py
